CPG-DEV/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Business_Unit_Detail__c</fullName>
        <label>Business Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CargillBusiness_Text__c</fullName>
        <formula>TEXT( Cargill_Business_Unit__c )</formula>
        <label>Cargill Business (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CargillEnterprise__c</fullName>
        <globalPicklist>Cargill_Enterprise</globalPicklist>
        <label>Cargill Enterprise</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CargillGroup__c</fullName>
        <globalPicklist>Cargill_Group</globalPicklist>
        <label>Cargill Group</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CargillRegion__c</fullName>
        <label>Cargill Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America (NA)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Central America Caribbean (CAC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America (SA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe Middle East Africa (EMEA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific (AP)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cargill_Business_Alias__c</fullName>
        <formula>CASE( Cargill_Business_Unit__c ,
&quot;Go To Market Corporate Accounts&quot;,&quot;GTM Corp Accts&quot;,
&quot;Go To Market Shared Sales North America&quot;,&quot;GTM SS NA&quot;,
&quot;Go To Market Shared Sales EMEA&quot;,&quot;GTM SS EMEA&quot;,
&quot;Global Edible Oil Solutions North America&quot;,&quot;GEOS NA&quot;,
&quot;Global Edible Oil Solutions Europe&quot;,&quot;GEOS Europe&quot;,
&quot;Cargill Industrial Specialties&quot;,&quot;CIS&quot;,
&quot;Global Edible Oil Solutions Mexico&quot;,&quot;GEOS Mexico&quot;,
&quot;Global Edible Oil Solutions South America&quot;,&quot;GEOS SA&quot;,
&quot;Global Edible Oil Solutions Venezuela&quot;,&quot;GEOS Venezuela&quot;,
&quot;Global Edible Oil Solutions India&quot;,&quot;GEOS India&quot;,
&quot;Global Edible Oil Solutions Asia Pacific&quot;,&quot;GEOS AP&quot;,
&quot;Foods Brazil&quot;,&quot;Foods Brazil&quot;,
&quot;Starches &amp; Sweeteners North America&quot;,&quot;SSNA&quot;,
&quot;Starches &amp; Sweeteners Europe&quot;,&quot;SSE&quot;,
&quot;Cargill Texturizing Solutions&quot;,&quot;CTS&quot;,
&quot;Starches &amp; Sweeteners South America&quot;,&quot;SSSA&quot;,
&quot;Foods Middle East, Turkey, and North Africa&quot;,&quot;CF METNA&quot;,
&quot;Cargill Cocoa &amp; Chocolate&quot;,&quot;CCC&quot;,
&quot;Cocoa &amp; Chocolate North America&quot;,&quot;CCCNA&quot;,
&quot;Cocoa &amp; Chocolate Brazil&quot;,&quot;CCC Brazil&quot;,
&quot;Refined Oils Asia Pacific&quot;,&quot;ROAP&quot;,
&quot;Starches &amp; Sweeteners China&quot;,&quot;S&amp;S China&quot;,
&quot;Starches &amp; Sweeteners Southeast Asia&quot;,&quot;S&amp;S SE Asia&quot;,
&quot;Toshoku&quot;,&quot;Toshoku&quot;,
&quot;Foods India&quot;,&quot;Foods India&quot;,
&quot;Malt&quot;,&quot;Malt&quot;,
&quot;Salt&quot;,&quot;Salt&quot;,
&quot;Cargill Deicing Technology&quot;,&quot;CDT&quot;,
&quot;Food Argentina&quot;,&quot;Foods Argentina&quot;,
&quot;&quot;
)</formula>
        <label>Cargill Business Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargill_Business_Unit__c</fullName>
        <globalPicklist>CargillBusiness</globalPicklist>
        <label>Cargill Business</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <description>Created by EB on 4/10/2017 for CCC Sprint1</description>
        <label>Cluster</label>
        <picklist>
            <picklistValues>
                <fullName>ASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLOBAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>METNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>